fixed overlay z-index; fixed wiki link editing
git-svn-id: http://svn.ilias.de/svn/ilias/trunk@53468 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/templates/default/less/Services/COPage/delos.less
+++ b/templates/default/less/Services/COPage/delos.less
@@ -362,3 +362,6 @@ a.nostyle:hover {
 	color: #000;
 }
 
+#ilEditorPanel_c {
+	z-index: 3000 !important;
+}
